--- a/staging.config.json
+++ b/staging.config.json
@@ -2,11 +2,13 @@
     {
       "repo": "https://kubernetes.github.io/ingress-nginx",
       "name": "ingress-nginx",
-      "version": "4.6.1"
+      "version": "4.6.0",
+      "namespace": "staging"
     },
     {
       "repo": "https://charts.bitnami.com/bitnami",
       "name": "redis",
-      "version": "17.10.2"
+      "version": "17.10.0",
+      "namespace": "staging"
     }
   ]
